# ChiantiPy

./: .gitignore  .readthedocs.toml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  Announce-v0.7.0.html  Announce-v0.7.0.md  Announce-v0.7.0.rst  Announce-v0.7.1.md  Announce-v0.7.1.rst  ChiantiPy.e4p  LICENSE  MANIFEST.in  README  README.html  README.md  README.rst  __init__.py  api.tar  chiantirc  environment.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  rtd_environment.yml  setup.cfg  setup.py  test.txt
.eric6project/: ChiantiPy.e4q  ChiantiPy.e6t
ChiantiPy/: __init__.py  __init__gh.py  __init__kpd.py  archival.py  data.py  filters.py  ionrec.py  static_version.py  util.py  version.py
ChiantiPy/Gui/: __init__.py
ChiantiPy/base/: _IonTrails.py  _IoneqOne.py  _SpecTrails.py  __init__.py
ChiantiPy/core/: Bunch.py  Continuum.py  Ion.py  Ioneq.py  IpyMspectrum.py  MradLoss.py  Mspectrum.py  RadLoss.py  Redux.py  Spectrum.py  _IonNew.py  _IonTrails.py  _SpecTrails.py  __init__.py
ChiantiPy/fortranformat/: _input.py  _output.py  config.py
ChiantiPy/model/: Maker.py  MakerBr.py  MakerD.py  MakerI.py  MakerMc.py  Match.py  __init__.py
ChiantiPy/tools/: io.py  (+10 more)
chianti/: constants.py  filters.py  io.py  ionrec.py  ipymputil.py  sources.py  util.py  version.py
docs/: 0-notes.txt  Makefile
ipython_notebooks/: QuickStart.html  QuickStart.ipynb
jupyter_notebooks/: 1_fe_13_demo_make_match.ipynb  2_fe_13_demo_check_model.ipynb  3_fe_13_demo_chi2_search.ipynb  4_fe_13_demo_mcmc.ipynb  5_fe_13_demo_mcmc_trace_analyze.ipynb  QuickStart.html  QuickStart.ipynb  README.txt  bunch_demo.ipynb  fe_13_demo_chi2.ipynb  fe_13_demo_make_model.ipynb  spectrum_demo.ipynb  spectrum_demo_2.ipynb  tab2_1993_qs_fe_13.json
licenses/: LICENSE  LICENSE.fortranformat
(+74 files in other folders)
