[build_docs]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_docs]
upload-dir = docs/build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = ChiantiPy
description = a Python interface to the CHIANTI atomic database for astrophysical spectroscopy
author = Ken Dere
author_email = kdere@gmu.edu
license = BSD
url = https://github.com/chianti-atomic/ChiantiPy
edit_on_github = True
github_project = chianti-atomic/ChiantiPy
